--- a/Member-Discount.html
+++ b/Member-Discount.html
@@ -360,7 +360,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     $('.jq-login-before').hide();
                                     $('.jq-login-after').show();
                                     $('.jq-member-nam').text(data.body.user.u_name)
@@ -381,7 +381,7 @@
                         var _each_QQ = $('.jq-service-QQ')
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     _each_wechat.append(
                                         '<a href="javascript:void(0)" class="btn btn-bg-blue">微信客服</a>' +
                                         '<div class="img-container">' +
@@ -419,7 +419,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     setCookie(data.body.sess);
                                     console.log(data.body.sess);
                                     alert('登入成功');
@@ -439,7 +439,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     clearCookie();
                                     alert('登出成功');
                                     $('.jq-login-before').show();
@@ -467,7 +467,7 @@
                         success: function (data) {
                             if (data.status) {
                                 switch (data.status) {
-                                    case '100':
+                                    case 100:
                                         alert('问题已送出，后续将会有专人客服与您联系。');
                                         window.location.reload();
                                         break;
@@ -486,7 +486,7 @@
                         var _each = $(".jq-pop-register").find('.jq-captcha-container');
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     _each.append(
                                         data.body.image
                                     )
@@ -514,7 +514,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     alert(data.message);
                                     window.location.reload();
                                     break;
@@ -541,7 +541,7 @@
                         var _length = data.body.list.length;
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     for (i = 0; i < _length; i++) {
                                         _each.append(
                                             '<div class="row">' +
@@ -584,7 +584,7 @@
                         var _length = data.body.list.length;
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     _result_length = $(".jq-member-detail").find('.row').length;
                                     for (i = 0; i < _length; i++) {
                                         _each.append(
