--- a/Live-Discount.html
+++ b/Live-Discount.html
@@ -308,7 +308,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     $('.jq-login-before').hide();
                                     $('.jq-login-after').show();
                                     $('.jq-member-nam').text(data.body.user.u_name)
@@ -329,7 +329,7 @@
                         var _each_QQ = $('.jq-service-QQ')
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     _each_wechat.append(
                                         '<a href="javascript:void(0)" class="btn btn-bg-blue">微信客服</a>' +
                                         '<div class="img-container">' +
@@ -367,7 +367,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     setCookie(data.body.sess);
                                     console.log(data.body.sess);
                                     alert('登入成功');
@@ -387,7 +387,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     clearCookie();
                                     alert('登出成功');
                                     $('.jq-login-before').show();
@@ -415,7 +415,7 @@
                         success: function (data) {
                             if (data.status) {
                                 switch (data.status) {
-                                    case '100':
+                                    case 100:
                                         alert('问题已送出，后续将会有专人客服与您联系。');
                                         window.location.reload();
                                         break;
@@ -434,7 +434,7 @@
                         var _each = $(".jq-pop-register").find('.jq-captcha-container');
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     _each.append(
                                         data.body.image
                                     )
@@ -463,7 +463,7 @@
                         console.log(data)
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     alert('註冊成功');
                                     window.location.reload();
                                     break;
@@ -493,7 +493,7 @@
                         var _length = data.body.list.length;
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     for (i = 0; i < _length; i++) {
                                         _each.append(
                                             '<div class="row">' +
@@ -536,7 +536,7 @@
                         var _length = data.body.list.length;
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     _result_length = $('.jq-sect-discount').find('.row').length;
                                     for (i = 0; i < _length; i++) {
                                         _each.append(
