--- a/Live-Entertainment.html
+++ b/Live-Entertainment.html
@@ -358,7 +358,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     $('.jq-login-before').hide();
                                     $('.jq-login-after').show();
                                     $('.jq-member-nam').text(data.body.user.u_name)
@@ -379,7 +379,7 @@
                         var _each_QQ = $('.jq-service-QQ')
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     _each_wechat.append(
                                         '<a href="javascript:void(0)" class="btn btn-bg-blue">微信客服</a>' +
                                         '<div class="img-container">' +
@@ -417,7 +417,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     setCookie(data.body.sess);
                                     console.log(data.body.sess);
                                     alert('登入成功');
@@ -437,7 +437,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     clearCookie();
                                     alert('登出成功');
                                     $('.jq-login-before').show();
@@ -465,7 +465,7 @@
                         success: function (data) {
                             if (data.status) {
                                 switch (data.status) {
-                                    case '100':
+                                    case 100:
                                         alert('问题已送出，后续将会有专人客服与您联系。');
                                         window.location.reload();
                                         break;
@@ -484,7 +484,7 @@
                         var _each = $(".jq-pop-register").find('.jq-captcha-container');
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     _each.append(
                                         data.body.image
                                     )
@@ -513,7 +513,7 @@
                         console.log(data)
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     alert('註冊成功');
                                     window.location.reload();
                                     break;
@@ -538,7 +538,7 @@
                         var _length = data.body.list.length;
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     for (i = 0; i < _length; i++) {
                                         _each.append(
                                             '<div class="col-xs-4">' +
@@ -567,7 +567,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     window.location.href = data.body.game_url;
                                     break;
                             }
