--- a/Member-DailyRecord.html
+++ b/Member-DailyRecord.html
@@ -433,7 +433,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     $('.jq-login-before').hide();
                                     $('.jq-login-after').show();
                                     $('.jq-member-nam').text(data.body.user.u_name)
@@ -454,7 +454,7 @@
                         var _each_QQ = $('.jq-service-QQ')
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     _each_wechat.append(
                                         '<a href="javascript:void(0)" class="btn btn-bg-blue">微信客服</a>' +
                                         '<div class="img-container">' +
@@ -492,7 +492,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     setCookie(data.body.sess);
                                     console.log(data.body.sess);
                                     alert('登入成功');
@@ -512,7 +512,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     clearCookie();
                                     alert('登出成功');
                                     $('.jq-login-before').show();
@@ -540,7 +540,7 @@
                         success: function (data) {
                             if (data.status) {
                                 switch (data.status) {
-                                    case '100':
+                                    case 100:
                                         alert('问题已送出，后续将会有专人客服与您联系。');
                                         window.location.reload();
                                         break;
@@ -559,7 +559,7 @@
                         var _each = $(".jq-pop-register").find('.jq-captcha-container');
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     _each.append(
                                         data.body.image
                                     )
@@ -587,7 +587,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     alert(data.message);
                                     window.location.reload();
                                     break;
@@ -619,7 +619,7 @@
                             var _length = data.body.list.length;
                             if (data.status) {
                                 switch (data.status) {
-                                    case '100':
+                                    case 100:
                                         for (i = 0; i < _length; i++) {
                                             _each.append(
                                                 '<div class="tr">' +
@@ -643,7 +643,7 @@
                             var _length = data.body.list.length;
                             if (data.status) {
                                 switch (data.status) {
-                                    case '100':
+                                    case 100:
                                         for (i = 0; i < _length; i++) {
                                             _each.append(
                                                 '<div class="tr">' +
@@ -667,7 +667,7 @@
                             var _length = data.body.list.length;
                             if (data.status) {
                                 switch (data.status) {
-                                    case '100':
+                                    case 100:
                                         for (i = 0; i < _length; i++) {
                                             _each.append(
                                                 '<div class="tr">' +
@@ -691,7 +691,7 @@
                             var _length = data.body.list.length;
                             if (data.status) {
                                 switch (data.status) {
-                                    case '100':
+                                    case 100:
                                         for (i = 0; i < _length; i++) {
                                             _each.append(
                                                 '<div class="tr">' +
@@ -728,7 +728,7 @@
                         var _length = data.body.list.length;
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     for (i = 0; i < _length; i++) {
                                         _each.append(
                                             '<div class="tr">' +
