--- a/Member-Deposit.html
+++ b/Member-Deposit.html
@@ -142,22 +142,30 @@
                     </ul>
                     <div class="member-detail">
                         <form class="container step1" action="">
-                            <div class="row ">
+                            <div class="row">
                                 <div class="radio-group-container">
                                     <p class="title">请选择充值渠道</p>
                                     <div class="radio-group clear">
                                         <label class="col-xs-3">
                                             <input class="jq-input-radio" value="unionpay2" type="radio" name="paytype-1">
                                             <span>快捷支付</span>
-                                        </label>																				<label class="col-xs-3">                                            <input class="jq-input-radio" value="unionpay3" type="radio" name="paytype-1">                                            <span>网银支付</span>                                        </label>
+                                        </label>																				<label class="col-xs-3">                                            <input class="jq-input-radio" value="unionpay3" type="radio" name="paytype-1">                                            <span>微信（充提中心）</span>                                        </label>
                                     </div>
                                 </div>
                             </div>
-                            <div class="row " >
+                            <div class="row" style="display:none;">
+                                <div class="select-group-container clear">
+                                    <p class="title">请选择银行卡</p>
+                                    <div class="select-group">
+                                        <select class="select" name="" id="">
+                                            <option value="">充提中心网银</option>
+                                        </select>
+                                    </div>
+                                </div>
                                 <div class="input-group-container clear">
                                     <p class="title">充值金额</p>
                                     <div class="input-group">
-                                        <input type="number" name="amount-1" min="1" placeholder="请输入充值金额">
+                                        <input type="text" placeholder="请输入充值金额">
                                         <span>* 單筆充值限額：最低
                                             <span style="color:red;">50.00</span> 元，最高
                                             <span style="color:red;">20000.00</span> 元 *
@@ -166,10 +174,10 @@
                                 </div>
                             </div>
                             <div class="row btn-action">
-                                <input class="btn btn-bg-blue step-btn1" type="button" value="下一步">
+                                <input class="btn btn-bg-blue" type="button" value="下一步">
                             </div>
-                        </form>						<form class="container payform" action="">
-                        <div class="container check-order" action=""style="display:none;">
+                        </form>
+                        <div class="container" action=""style="display:none;">
                             <div class="row" >
                                 <div class="confirm-group-container clear">
                                     <p class="title">用户名</p>
@@ -180,7 +188,7 @@
                                     <p class="detail">ct_bank2018116153339fe535a5fda8</p>
                                 </div>
                                 <div class="confirm-group-container clear">
-                                    <p class="title">支付渠道</p>
+                                    <p class="title">支付银行</p>
                                     <p class="detail">充提中心网银</p>
                                 </div>
                                 <div class="confirm-group-container clear">
@@ -193,8 +201,7 @@
                             <div class="row btn-action">
                                 <input class="btn btn-bg-blue" type="button" value="确认支付">
                             </div>
-                        </div>						<input type="text" name="scode" value="CID05101">						<input type="text" name="orderid" value="20180209001">						<input type="text" name="paytype" value="wechat2">						<input type="text" name="amount" value="1">						<input type="text" name="productname" value="test">						<input type="text" name="currcode" value="CNY">						<input type="text" name="userid" value="tryion">						<input type="text" name="memo" value="测试">						<input type="text" name="callbackurl" value="https://ldyl.co/">						<input type="text" name="sign" value="">		<input type="submit" value="送出">						</form>
-                    </div>
+                        </div>						<input type="text" name="scode" value="CID05101">						<input type="text" name="orderid" value="20180209001">						<input type="text" name="paytype" value="wechat2">						<input type="text" name="amount" value="1">						<input type="text" name="productname" value="test">						<input type="text" name="currcode" value="CNY">						<input type="text" name="userid" value="tryion">						<input type="text" name="memo" value="测试">						<input type="text" name="callbackurl" value="https://ldyl.co/">						<input type="text" name="sign" value="">		<input type="submit" value="送出">						</form>                    </div>
                 </div>
             </section>
         </main>
@@ -570,8 +577,7 @@
                         }
                     }
                 });
-            });						$('.step-btn1').click(function () {				if($('.jq-input-radio:checked').length ==0)				{					alert('请选择充值渠道');					return false;				}				if($('input[name=amount-1]').val() <50)				{					alert('單筆充值限額最低 50.00元');					return false;				}				if($('input[name=amount-1]').val() >20000)				{					alert('單筆充值限額最高 20000元');					return false;				}								<!-- $( -->				$('.step1').hide();				$('.check-order').show();							})
-            
+            });						$('.step-btn1').click(function () {				if($('.jq-input-radio:checked').length ==0)				{					alert('请选择充值渠道');					return false;				}				if($('input[name=amount-1]').val() <50)				{					alert('單筆充值限額最低 50.00元');					return false;				}				if($('input[name=amount-1]').val() >20000)				{					alert('單筆充值限額最高 20000元');					return false;				}								<!-- $( -->				$('.step1').hide();				$('.check-order').show();							})            
         </script>
     </div>
 </body>
