--- a/Member-Password.html
+++ b/Member-Password.html
@@ -426,7 +426,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     $('.jq-login-before').hide();
                                     $('.jq-login-after').show();
                                     $('.jq-member-nam').text(data.body.user.u_name)
@@ -447,7 +447,7 @@
                         var _each_QQ = $('.jq-service-QQ')
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     _each_wechat.append(
                                         '<a href="javascript:void(0)" class="btn btn-bg-blue">微信客服</a>' +
                                         '<div class="img-container">' +
@@ -485,7 +485,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     setCookie(data.body.sess);
                                     console.log(data.body.sess);
                                     alert('登入成功');
@@ -505,7 +505,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     clearCookie();
                                     alert('登出成功');
                                     $('.jq-login-before').show();
@@ -533,7 +533,7 @@
                         success: function (data) {
                             if (data.status) {
                                 switch (data.status) {
-                                    case '100':
+                                    case 100:
                                         alert('问题已送出，后续将会有专人客服与您联系。');
                                         window.location.reload();
                                         break;
@@ -552,7 +552,7 @@
                         var _each = $(".jq-pop-register").find('.jq-captcha-container');
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     _each.append(
                                         data.body.image
                                     )
@@ -580,7 +580,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     alert(data.message);
                                     window.location.reload();
                                     break;
@@ -601,7 +601,7 @@
                         var _key = data.body.isSet;
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     if (_key == 0) {
                                         $('.jq-user-cashpassword').hide();
                                         $('.jq-user-cashpassword-first').show();
@@ -631,7 +631,7 @@
                             var _key = data.body.isSet;
                             if (data.status) {
                                 switch (data.status) {
-                                    case '100':
+                                    case 100:
                                         alert('修改成功，下次请使用新密码登入');
                                     case '999':
                                         alert(data.message);
@@ -657,7 +657,7 @@
                             var _key = data.body.isSet;
                             if (data.status) {
                                 switch (data.status) {
-                                    case '100':
+                                    case 100:
                                         alert('资金密码设定完成');
                                     case '999':
                                         alert(data.message);
@@ -688,7 +688,7 @@
                             var _key = data.body.isSet;
                             if (data.status) {
                                 switch (data.status) {
-                                    case '100':
+                                    case 100:
                                         alert('资金密码修改成功，下次请使用新密码');
                                     case '999':
                                         alert(data.message);
