--- a/Member-Deposit.html
+++ b/Member-Deposit.html
@@ -147,25 +147,17 @@
                                     <p class="title">请选择充值渠道</p>
                                     <div class="radio-group clear">
                                         <label class="col-xs-3">
-                                            <input class="jq-input-radio" value="unionpay2" type="radio" name="paytype-1">
+                                            <input class="jq-input-radio" data-title="快捷支付" value="unionpay2" type="radio" name="paytype-1">
                                             <span>快捷支付</span>
-                                        </label>																				<label class="col-xs-3">                                            <input class="jq-input-radio" value="unionpay3" type="radio" name="paytype-1">                                            <span>微信（充提中心）</span>                                        </label>
+                                        </label>																				<label class="col-xs-3">                                            <input class="jq-input-radio" data-title="银联支付" value="unionpay3" type="radio" name="paytype-1">                                            <span>银联支付</span>                                        </label>
                                     </div>
                                 </div>
                             </div>
-                            <div class="row" style="display:none;">
-                                <div class="select-group-container clear">
-                                    <p class="title">请选择银行卡</p>
-                                    <div class="select-group">
-                                        <select class="select" name="" id="">
-                                            <option value="">充提中心网银</option>
-                                        </select>
-                                    </div>
-                                </div>
+                            <div class="row" >
                                 <div class="input-group-container clear">
                                     <p class="title">充值金额</p>
                                     <div class="input-group">
-                                        <input type="text" placeholder="请输入充值金额">
+                                        <input type="number" min="1"  name="amount-1" placeholder="请输入充值金额">
                                         <span>* 單筆充值限額：最低
                                             <span style="color:red;">50.00</span> 元，最高
                                             <span style="color:red;">20000.00</span> 元 *
@@ -174,34 +166,34 @@
                                 </div>
                             </div>
                             <div class="row btn-action">
-                                <input class="btn btn-bg-blue" type="button" value="下一步">
+                                <input class="btn btn-bg-blue step-btn1" type="button" value="下一步">
                             </div>
-                        </form>
-                        <div class="container" action=""style="display:none;">
+                        </form>						
+                        <div class="container checkpay" style="display:none;">
                             <div class="row" >
                                 <div class="confirm-group-container clear">
                                     <p class="title">用户名</p>
-                                    <p class="detail">monsters</p>
+                                    <p class="detail" id="_u_account">monsters</p>
                                 </div>
                                 <div class="confirm-group-container clear">
                                     <p class="title">订单号码</p>
-                                    <p class="detail">ct_bank2018116153339fe535a5fda8</p>
+                                    <p class="detail" id="_order_id">ct_bank2018116153339fe535a5fda8</p>
                                 </div>
                                 <div class="confirm-group-container clear">
-                                    <p class="title">支付银行</p>
-                                    <p class="detail">充提中心网银</p>
+                                    <p class="title">支付渠道</p>
+                                    <p class="detail" id="_paytype">充提中心网银</p>
                                 </div>
                                 <div class="confirm-group-container clear">
                                     <p class="title">充值金额</p>
                                     <p class="detail">RMB
-                                        <span style="color:red; font-weight: bold;">5,000.00</span>
+                                        <span  id="_amount" style="color:red; font-weight: bold;">5,000.00</span>
                                     </p>
                                 </div>
                             </div>
-                            <div class="row btn-action">
-                                <input class="btn btn-bg-blue" type="button" value="确认支付">
-                            </div>
-                        </div>						<input type="text" name="scode" value="CID05101">						<input type="text" name="orderid" value="20180209001">						<input type="text" name="paytype" value="wechat2">						<input type="text" name="amount" value="1">						<input type="text" name="productname" value="test">						<input type="text" name="currcode" value="CNY">						<input type="text" name="userid" value="tryion">						<input type="text" name="memo" value="测试">						<input type="text" name="callbackurl" value="https://ldyl.co/">						<input type="text" name="sign" value="">		<input type="submit" value="送出">						</form>                    </div>
+                            <div class="row btn-action">								<form action="" method="post" id="payfrm">								<input type="hidden" name="scode" value="">								<input type="hidden" name="orderid" value="">								<input type="hidden" name="paytype" value="">								<input type="hidden" name="amount" value="">								<input type="hidden" name="productname" value="充值">								<input type="hidden" name="currcode" value="CNY">								<input type="hidden" name="userid" value="">								<input type="hidden" name="memo" value="">								<input type="hidden" name="callbackurl" value="">								<input type="hidden" name="sign" value="">
+                                <input class="btn btn-bg-blue" type="submit" value="确认支付">								</form>
+                            </div>							
+                        </div>										                    </div>
                 </div>
             </section>
         </main>
@@ -577,7 +569,7 @@
                         }
                     }
                 });
-            });						$('.step-btn1').click(function () {				if($('.jq-input-radio:checked').length ==0)				{					alert('请选择充值渠道');					return false;				}				if($('input[name=amount-1]').val() <50)				{					alert('單筆充值限額最低 50.00元');					return false;				}				if($('input[name=amount-1]').val() >20000)				{					alert('單筆充值限額最高 20000元');					return false;				}								<!-- $( -->				$('.step1').hide();				$('.check-order').show();							})            
+            });						$('.step-btn1').click(function () {				if($('.jq-input-radio:checked').length ==0)				{					alert('请选择充值渠道');					return false;				}				if($('input[name=amount-1]').val() <50)				{					alert('單筆充值限額最低 50.00元');					return false;				}				if($('input[name=amount-1]').val() >20000)				{					alert('單筆充值限額最高 20000元');					return false;				}								$.ajax({                    url: "/api/Api/getRechargeOrder?sess=" + sessionStorage.session,                    type: "POST",										data: JSON.stringify({                        paytype: $('.jq-input-radio:checked').val(),                        amount: $('input[name=amount-1]').val()                    }),					                    success: function (data) {                        if (data.status == '100') {															$('#_u_account').html(data.body.u_account);							$('#_order_id').html(data.body.orderid);							$('#_paytype').html($('.jq-input-radio:checked').data('title'));							$('#_amount').html(data.body.amount);							$('.step1').hide();							$('.checkpay').show();							$.each(data.body, function(i,e){								$('input[type=hidden][name='+i+']').val(e);							})							$('#payfrm').attr('action',data.body.pay_url);                        }else						{							alert(data.message);						}                    }                });				;							})            
         </script>
     </div>
 </body>
