--- a/Member-Deposit.html
+++ b/Member-Deposit.html
@@ -373,7 +373,7 @@
 
         <script src="js/jquery.min.js"></script>
         <script src="js/script.js"></script>
-        <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+        <script src="lib/owlcarousel/owl.carousel.min.js"></script>				<script src="js/main.js"></script>
         <script>
             Live.Global.intital();
             Live.Global.member();
@@ -398,58 +398,7 @@
                     _phone_key = true;
                 }
             }
-            function userInformation() {				
-                $.ajax({
-                    url: "/api/Api/getUser?sess=" + sessionStorage.session,
-                    type: "GET",
-                    success: function (data) {					
-                        if (data.status) {
-                            switch (data.status) {
-                                case 100:									
-                                    $('.jq-login-before').hide();
-                                    $('.jq-login-after').show();
-                                    $('.jq-member-nam').text(data.body.user.u_name);	
-                                    break;
-                            }
-                        }
-                    }
-                });
-            }
 
-            $(window).load(function () {
-                $.ajax({
-                    url: "/api/Api/getFooterInfo",
-                    type: "GET",
-                    success: function (data) {
-                        console.log(data)
-                        var _each_wechat = $('.jq-service-wechat');
-                        var _each_QQ = $('.jq-service-QQ')
-                        if (data.status) {
-                            switch (data.status) {
-                                case '100':
-                                    _each_wechat.append(
-                                        '<a href="javascript:void(0)" class="btn btn-bg-blue">微信客服</a>' +
-                                        '<div class="img-container">' +
-                                            '<img class="img absolute-center-xs" src="images/webconfig/' + data.body.list.wechat_qr_image.wc_value + '" alt="">' +
-                                        '</div>'
-                                    )
-                                    _each_QQ.append(
-                                        '<a href="javascript:void(0)" class="btn btn-bg-blue">QQ客服</a>' +
-                                        '<div class="img-container">' +
-                                            '<img class="img absolute-center-xs" src="images/webconfig/' + data.body.list.qq_qr_image.wc_value + '" alt="">' +
-                                        '</div>'
-                                    )
-                            }
-                        }
-                    }
-                });
-                if (sessionStorage.session == undefined || sessionStorage.session == '') {
-                    $('.jq-login-before').show();
-                    $('.jq-login-after').hide();
-                } else {				
-                    userInformation();
-                }
-            });
             $('.ajax-btn-login').click(function () {
                 var _parent = $(this).parents('.ajax-login-form');
                 var _account = _parent.find('[name=account]').val();
@@ -464,7 +413,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     setCookie(data.body.sess);
                                     console.log(data.body.sess);
                                     alert('登入成功');
@@ -484,7 +433,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     clearCookie();
                                     alert('登出成功');
                                     $('.jq-login-before').show();
@@ -512,7 +461,7 @@
                         success: function (data) {
                             if (data.status) {
                                 switch (data.status) {
-                                    case '100':
+                                    case 100:
                                         alert('问题已送出，后续将会有专人客服与您联系。');
                                         window.location.reload();
                                         break;
@@ -531,7 +480,7 @@
                         var _each = $(".jq-pop-register").find('.jq-captcha-container');
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     _each.append(
                                         data.body.image
                                     )
@@ -559,7 +508,7 @@
                     success: function (data) {
                         if (data.status) {
                             switch (data.status) {
-                                case '100':
+                                case 100:
                                     alert(data.message);
                                     window.location.reload();
                                     break;
