--- a/Live-Electric.html
+++ b/Live-Electric.html
@@ -280,7 +280,7 @@
 
         <script src="js/jquery.min.js"></script>
         <script src="js/script.js"></script>
-        <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+        <script src="lib/owlcarousel/owl.carousel.min.js"></script>				<script src="/js/main.js"></script>
         <script>
             Live.Global.intital();
             Live.Global.owl_banner();
