--- a/Member-Apply-Discount.html
+++ b/Member-Apply-Discount.html
@@ -538,7 +538,7 @@
 
                         <p class="title">类型</p>
 
-                        <select class="select" name="message-type" id="">
+                        <select class="select" name="message-type" >
 
                             <option value="up">上級</option>
 
