--- a/Member-Transfer.html
+++ b/Member-Transfer.html
@@ -332,7 +332,7 @@
 
                                     <div class="select-group">
 
-                                        <select class="select" name="" id="">
+                                        <select class="select" name="" >
 
                                             <option value="">AG</option>
 
@@ -616,7 +616,7 @@
 
                         <p class="title">类型</p>
 
-                        <select class="select" name="message-type" id="">
+                        <select class="select" name="message-type" >
 
                             <option value="up">上級</option>
 
