--- a/Live-App.html
+++ b/Live-App.html
@@ -436,7 +436,7 @@
 
                         <p class="title">类型</p>
 
-                        <select class="select" name="message-type" id="">
+                        <select class="select" name="message-type" >
 
                             <option value="up">上級</option>
 
